--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "setup": "node setup.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "migrate:make": "knex migrate:make",
+    "seed": "knex seed:run"
   },
   "author": "",
   "license": "ISC",
