Fix CI/CD pipeline: remove pnpm-lock.yaml and add Clerk env vars for build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,12 @@ jobs:
         npm run build
       env:
         NEXT_PUBLIC_API_URL: http://localhost:5000/api
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: pk_test_mock_key_for_ci_build
+        CLERK_SECRET_KEY: sk_test_mock_key_for_ci_build
+        NEXT_PUBLIC_CLERK_SIGN_IN_URL: /sign-in
+        NEXT_PUBLIC_CLERK_SIGN_UP_URL: /sign-up
+        NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL: /dashboard
+        NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL: /dashboard
 
   security-audit:
     runs-on: ubuntu-latest
